Fix tests and race condition. Remove legacy cluster cache.